--- a/index.html
+++ b/index.html
@@ -1,217 +1,5 @@
 <!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="UTF-8">
-    <title>CSCI225 Homepage of Carson Weeks</title>
-</head>
-
-<header>
-    Assignment 1
-</header>
-
-<body>
-
-
-    <div class="navbar">
-        <ul>
-            <li><a href="https://www.usca.edu/">USCA Main Website</a></li>
-            <li><a href="#Assignment">Assignment</a></li>
-            <li><a href="#Contact Information">Contact Information</a></li>
-            <li><a href="https://blackboard.usca.edu/">USCA Blackboard</a></li>
-            <li><a href="https://www.w3schools.com/">w3schools</a></li>
-
-        </ul>
-    </div>
-
-    <div class="Introduction">
-        <p>
-            Hello my name is Carson Weeks and I'm a senior at USC at aiken and majoring in Applied Computer Science.
-            <br>
-            I also like to play guitar and take pictures as hobbies as well as video games every now and then.
-            <br>
-            I also enjoy building and upgrading on computers.
-            <br>
-            I'm also a car enthussiast that likes to drive and work on cars.
-            <br>
-            Here is a picture I have taken at a car show below.
-            <br>
-        </p>
-
-        <details>
-            <summary>Click to read more</summary>
-            <p>
-                Taken at Charlotte Motor Speedway by me
-            </p>
-        </details>
-        <img src="img\IMG_2120-2.jpg" alt="pic ive taken" width="400px">
-
-    </div>
-
-    <div class="Assignment">
-        <h1>Assignment</h1>
-        <ol>
-            <a href="doc\Assignment1.pdf">Assignment1</a>
-        </ol>
-
-    </div>
-
-    <div class="Portfolio">
-        <h1>Portfolio</h1>
-        <ul>
-            <li>Software Enigneering Database Project</li>
-        </ul>
-    </div>
-
-    <address>
-        <p>Contact Information</p>
-        <a href="mailto: crweeks@usca.edu">Send Email</a>
-    </address>
-
-    <div class="schedule">
-        <h1>Schedule</h1>
-
-        <table>
-            <tr>
-                <th>Time</th>
-                <th>Monday</th>
-                <th>Tuesday</th>
-                <th>Wednesday</th>
-                <th>Thursday</th>
-                <th>Friday</th>
-            </tr>
-            <tr height="70px">
-                <td>8:00-9:00</td>
-                <td></td>
-                <td>CSCI210
-                    <br>
-                    Intro to Computer Organization
-                    <br>
-                    8:00-9:15
-                </td>
-                <td></td>
-                <td>CSCI210
-                    <br>
-                    Intro to Computer Organization
-                    <br>
-                    8:00-9:15
-                </td>
-                <td></td>
-            </tr>
-            <tr height="70px">
-                <td>9:00-10:00</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr height="70px">
-                <td>10:00-11:00</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr height="70px">
-                <td>11:00-12:00</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr height="70px">
-                <td>12:00-1:00</td>
-                <td>CSCI225
-                    <br>
-                    Web Development
-                    <br>
-                    12:00-1:15
-                    <br>
-                </td>
-                <td></td>
-                <td>CSCI225
-                    <br>
-                    Web Development
-                    <br>
-                    12:00-1:15
-                    <br>
-                </td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr height="70px">
-                <td>1:00-2:00</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr height="70px">
-                <td>2:00-3:00</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr height="70px">
-                <td>3:00-4:00</td>
-                <td></td>
-                <td>CSCI411
-                    <br>
-                    Operating Systems
-                    <br>
-                    3:00-4:20
-                </td>
-                <td></td>
-                <td>CSCI411
-                    <br>
-                    Operating Systems
-                    <br>
-                    3:00-4:20
-                </td>
-                <td></td>
-            </tr>
-            <tr height="70px">
-                <td>4:00-5:00</td>
-                <td></td>
-                <td rowspan="2">CSCI340
-                    <br>
-                    Mobile Application Development
-                    <br>
-                    4:30-5:45
-                </td>
-                <td></td>
-                <td rowspan="2">CSCI340
-                    <br>
-                    Mobile Application Development
-                    <br>
-                    4:30-5:45
-                </td>
-                <td></td>
-            </tr>
-            <tr height="70px">
-                <td>5:00-6:00</td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-        </table>
-
-
-        <footer>
-            <p> &copy;Copyright Section</p>
-        </footer>
-    </div>
-
-
-
-</body>
-
+<html lang="en">
 <style>
     html {
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -226,9 +14,212 @@
         border: 1px solid black;
     }
 
+    tr {
+        height: 70px;
+    }
+
     td {
         border: 1px solid black;
     }
 </style>
 
+    <meta charset="UTF-8">
+    <title>CSCI225 Homepage of Carson Weeks</title>
+    Assignment 1
+
+
+<div class="navbar">
+    <ul>
+        <li><a href="https://www.usca.edu/">USCA Main Website</a></li>
+        <li><a href="#Assignment">Assignment</a></li>
+        <li><a href="#Contact">Contact Information</a></li>
+        <li><a href="https://blackboard.usca.edu/">USCA Blackboard</a></li>
+        <li><a href="https://www.w3schools.com/">w3schools</a></li>
+
+    </ul>
+</div>
+
+<div class="Introduction">
+    <p>
+        Hello my name is Carson Weeks and I'm a senior at USC at aiken and majoring in Applied Computer Science.
+        <br>
+        I also like to play guitar and take pictures as hobbies as well as video games every now and then.
+        <br>
+        I also enjoy building and upgrading on computers.
+        <br>
+        I'm also a car enthussiast that likes to drive and work on cars.
+        <br>
+        Here is a picture I have taken at a car show below.
+        <br>
+    </p>
+
+    <details>
+        <summary>Click to read more</summary>
+        <p>
+            Taken at Charlotte Motor Speedway by me
+        </p>
+    </details>
+    <img src="img/IMG_2120-2.jpg" alt="picture" width="400">
+
+</div>
+
+<div class="Assignment">
+    <h1>Assignment</h1>
+    <ol>
+        <li><a href="doc/Assignment1.pdf">Assignment1</a></li>
+    </ol>
+
+</div>
+
+<div class="Portfolio">
+    <h1>Portfolio</h1>
+    <ul>
+        <li>Software Enigneering Database Project</li>
+    </ul>
+</div>
+
+<address>
+    <p>Contact Information</p>
+    <a href="mailto:crweeks@usca.edu">Send Email</a>
+</address>
+
+<div class="schedule">
+    <h1>Schedule</h1>
+
+    <table>
+        <tr>
+            <th>Time</th>
+            <th>Monday</th>
+            <th>Tuesday</th>
+            <th>Wednesday</th>
+            <th>Thursday</th>
+            <th>Friday</th>
+        </tr>
+        <tr>
+            <td>8:00-9:00</td>
+            <td></td>
+            <td>CSCI210
+                <br>
+                Intro to Computer Organization
+                <br>
+                8:00-9:15
+            </td>
+            <td></td>
+            <td>CSCI210
+                <br>
+                Intro to Computer Organization
+                <br>
+                8:00-9:15
+            </td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>9:00-10:00</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>10:00-11:00</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>11:00-12:00</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>12:00-1:00</td>
+            <td>CSCI225
+                <br>
+                Web Development
+                <br>
+                12:00-1:15
+                <br>
+            </td>
+            <td></td>
+            <td>CSCI225
+                <br>
+                Web Development
+                <br>
+                12:00-1:15
+                <br>
+            </td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>1:00-2:00</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>2:00-3:00</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>3:00-4:00</td>
+            <td></td>
+            <td>CSCI411
+                <br>
+                Operating Systems
+                <br>
+                3:00-4:20
+            </td>
+            <td></td>
+            <td>CSCI411
+                <br>
+                Operating Systems
+                <br>
+                3:00-4:20
+            </td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>4:00-5:00</td>
+            <td></td>
+            <td rowspan="2">CSCI340
+                <br>
+                Mobile Application Development
+                <br>
+                4:30-5:45
+            </td>
+            <td></td>
+            <td rowspan="2">CSCI340
+                <br>
+                Mobile Application Development
+                <br>
+                4:30-5:45
+            </td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>5:00-6:00</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+    </table>
+
+
+    <footer>
+        <p> &copy;Copyright Section</p>
+    </footer>
+</div>
 </html>
