--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     <h1>Assignment</h1>
     <ol>
         <li><a href="doc/Assignment1.pdf">Assignment1</a></li>
+        <li><a href="ContactMe.html">Contact Me</a></li>
     </ol>
 
 </div>
