--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <h1>Assignment</h1>
         <ol>
             <li><a href="doc/Assignment1.pdf">Assignment1</a></li>
+            <li><a href="bmi.html">BMI Calculator</a></li>
             <li><a href="ContactMe.html">Contact Me</a></li>
         </ol>
 
